--- a/index.html
+++ b/index.html
@@ -12,8 +12,19 @@
 
 </head>
     <body>
-        <h1>Welcome To</h1>
+       <section class="new-two">
+        <div class="new-one">
+            <h1>Welcome To</h1>
         <h1><span class="orange-color">Masum</span>World!</h1>
-       
+        <h2>who I am?</h2>
+        <p>I am a student of CSE Engneering</p>
+        <p>i have a goal in a great web developer.</p>
+        <p>so it is my short story</p>
+        <a class="link-button" href="https://www.facebook.com/exsilent.mojahid.1">Just Go</a>
+        </div>
+        <div class="new-one">
+            <img src="images/my-bg.png" alt="">
+        </div>
+       </section>
     </body>
 </html>
