--- a/index.html
+++ b/index.html
@@ -26,5 +26,16 @@
             <img src="images/my-bg.png" alt="">
         </div>
        </section>
+       <section class="dream-big">
+        <div class="new-one"><img src="images/my-bg2.png" alt=""></div>
+        <div class="new-one">
+            <h1>
+                My Dream
+            </h1>
+            <h2>Become a Web Developer</h2>
+            <p>I already learn the basic HTML & CSS.I can build any simple Website.My goal is to build Many popular Website.</p>
+            <a class="link-button" href="https://myaccount.google.com/?hl=en&utm_source=OGB&utm_medium=act">Gmail</a>
+        </div>
+       </section>
     </body>
 </html>
