--- a/index.html
+++ b/index.html
@@ -37,5 +37,20 @@
             <a class="link-button" href="https://myaccount.google.com/?hl=en&utm_source=OGB&utm_medium=act">Gmail</a>
         </div>
        </section>
+       <section class="exp-area">
+        <h1>Experiances</h1>
+        <div>
+            <h1>Full Stack Web Developer</h1>
+            <h2>2022 present ! Pro level Developer</h2>
+            <p>I am the master of HTML CSS & JAVA SCRIPT.I know Everything Nedded to make a Website function,efficiant.I didn't stop web.I will give you 100% web solution.</p>
+        </div>
+        <div>
+            <h1>Baby Web Developer</h1>
+            <h2>2020-2021 Programing Hero Learner</h2>
+            <p>They didn't offer me a job.But i made my self remove Web Developer.I made there website and show it to them.They liked it &upload the content</p>
+            
+        </div>
+
+       </section>
     </body>
 </html>
