--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
     <body>
-       <section class="new-two">
+       <section class="new-two flexible-container">
         <div class="new-one">
             <h1>Welcome To</h1>
         <h1><span class="orange-color">Masum</span>World!</h1>
@@ -26,7 +26,7 @@
             <img src="images/my-bg.png" alt="">
         </div>
        </section>
-       <section class="dream-big">
+       <section class="dream-big flexible-container">
         <div class="new-one"><img src="images/my-bg2.png" alt=""></div>
         <div class="new-one">
             <h1>
@@ -39,18 +39,24 @@
        </section>
        <section class="exp-area">
         <h1>Experiances</h1>
-        <div>
-            <h1>Full Stack Web Developer</h1>
-            <h2>2022 present ! Pro level Developer</h2>
-            <p>I am the master of HTML CSS & JAVA SCRIPT.I know Everything Nedded to make a Website function,efficiant.I didn't stop web.I will give you 100% web solution.</p>
+       <div class="flexible-container">
+            <div id="web-developer" class="experiance-item">
+                <h1>Full Stack Web Developer</h1>
+                <h2 class="orange-color">2022 present ! Pro level Developer</h2>
+                <p>I am the master of HTML CSS & JAVA SCRIPT.I know Everything Nedded to make a Website function,efficiant.I didn't stop web.I will give you 100% web solution.</p>
+            </div>
+            <div id="baby-developer" class="experiance-item">
+                <h1>Baby Web Developer</h1>
+                <h2 class="orange-color">2020-2021 Programing Hero Learner</h2>
+                <p>They didn't offer me a job.But i made my self remove Web Developer.I made there website and show it to them.They liked it &upload the content</p>
+            </div>    
+    
         </div>
-        <div>
-            <h1>Baby Web Developer</h1>
-            <h2>2020-2021 Programing Hero Learner</h2>
-            <p>They didn't offer me a job.But i made my self remove Web Developer.I made there website and show it to them.They liked it &upload the content</p>
-            
-        </div>
+
 
        </section>
     </body>
+    <footer>
+        <p>gmmasum1999@gmail.com 2022</p>
+    </footer>
 </html>
